# identity.rs

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
doc/: search-index.js
doc/identity/: fn.refl.html  index.html  macro.ty_list!.html  sidebar-items.js  struct.Refl.html  trait.Equals.html  trait.HasParam.html  trait.Identity.html  trait.IdentityUtil.html
doc/identity/elim_helpers/: index.html  sidebar-items.js  struct.MLReflCase.html
doc/identity/helpers/: index.html
doc/identity/lift/: fn.ty_and_then.html  fn.ty_ap.html  fn.ty_compose.html  fn.ty_const.html  fn.ty_flip.html  fn.ty_id.html  index.html  sidebar-items.js  struct.Ap.html  struct.ApTyFun0.html  struct.ApTyFun1.html  struct.Compose.html  struct.Cons.html  struct.Const.html  struct.ConstTyFun.html  struct.Flip.html  struct.FlipTyFun.html  struct.Flipped.html  struct.Id.html  struct.LiFunToTyFun.html  struct.LiToTy.html  struct.Nil.html  struct.TyFunToLiFun.html  struct.Uncurry.html  trait.Exists.html  trait.ForAll.html  trait.LiFun.html  trait.Pi.html  trait.Sigma.html  trait.TyFun.html  trait.TyFun2.html  trait.TyList.html  trait.TysFun.html  type.AndThen.html  type.Flip.html  type.TyPair.html  type.TyTriple.html
doc/implementors/core/clone/: trait.Clone.js
doc/implementors/core/default/: trait.Default.js
doc/implementors/core/fmt/: trait.Debug.js
doc/implementors/core/hash/: trait.Hash.js
doc/implementors/core/marker/: trait.Copy.js
doc/implementors/identity/: trait.HasParam.js
doc/implementors/identity/lift/: trait.Exists.js  trait.LiFun.js
src/: lib.rs  lift.rs
(+3 files in other folders)
